* [F - 16/07/2025]: Changelog.txt, AuthConfiguration.java, ReservationController.java, showReservation.html, dashboard.html : 
    - Implementata funzionalità che permette a un utente registrato di vedere le sue prenotazioni
    - Aggiunta rotta a AuthConfiguration.java
    - dashboard aggiunta rotta per il link le mie prenotazioni

* [F - 15/07/2025]: Changelog.txt : 
    - Gestita parte Reservetion e introdotta form per user_DEFAULT per prenotare e validazione dati
    - AuthConfiguration permessi per rotta '/reservation' solo utenti autenticati
    - Aggiunta vista se la prenotazione avviene con successo

* [F - 15/07/2025]: Changelog.txt : 
    - MainController gestita rotta /home
    - Create viste dashboard per la home (differenti per default_user e admin)
    - UserController, UserService e UserRepository
    - CredentialsService

* [F - 15/07/2025]: Changelog.txt : 
    - aggiunte classi Menu, Restaurant, Table (Service,Repository e Controller)

* [F - 15/07/2025]: Changelog.txt : 
    - aggiunte immagini applicazione e rimossa vecchia.

* [F - 14/07/2025]: Changelog.txt, User.java, Credentials.java, AuthConfiguration.java, index.html e altri : 
    - index.html per tasto scopri e image_index
    - introdotte formLogin, formRegisterUser e registrationSuccessful
    - introdotto style.css e common.html per stile comune del sito web
    - AuthenticationController.java gestita logica registrazione, login, successo registrazione con validazione
        dati e visulizzazione index
    - UserValidator e CredentialsValidator settato il messages.properties

* [F - 13/07/2025]: Changelog.txt, User.java, Credentials.java, AuthConfiguration.java : 
    - Creati i modelli User e Credentials per la gestione della registrazione degli utenti
    - Creati anche i rispettivi: service,repository
    - AuthConfiguration.java per la gestione della sicurezza delle rotte ecc

* [F - 13/07/2025]: Changelog.txt, messages.properties, application.properties :