@@ -29,8 +29,8 @@
 						</div>
 						<div class="tile is-parent">
 							<article class="tile is-child box has-background-grigio">
-								<p class="title is-4">Prenotazioni totali</p>
-								<p class="subtitle is-4" th:text="${allReservation}">100</p>
+								<p class="title is-4">Prenotazioni di oggi</p>
+								<p class="subtitle is-4" th:text="${allReservationForToday}">100</p>
 							</article>
 						</div>
 						<div class="tile is-parent">
